--- a/Client/package.json
+++ b/Client/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-licensing": "^1.1.4",
+    "@progress/kendo-react-animation": "^4.6.0",
+    "@progress/kendo-react-treeview": "^4.6.0",
+    "@progress/kendo-theme-bootstrap": "^4.35.1",
+    "@progress/kendo-theme-default": "^4.38.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "immutability-helper": "^3.1.1",
+    "mdbreact": "^5.0.2",
+    "namor": "^2.0.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-checkbox-tree": "^1.6.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.6.3",
+    "styled-components": "^5.2.3",
+    "sweetalert2": "^10.15.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
